# USTC_2022_Principles-and-Techniques-of-Compiler

./: .clang-format  CMakeLists.txt  README.md  shell.nix
Documentations/1-parser/: Basics.md  Flex-matching.md  Flex-regular-expressions.md  Parser-FurtherReadings.md  README.md
Documentations/2-ir-gen-warmup/: README.md
Documentations/3-ir-gen/: README.md  more-tips.md
Documentations/4.1-ssa/: README.md
Documentations/4.2-gvn/: README.md
Documentations/common/: LightIR.md  cminusf.md  simple_cpp.md
Reports/1-parser/: README.md  lexer_output  parser_output
Reports/2-ir-gen-warmup/: README.md
Reports/3-ir-gen/: README.md
Reports/4.1-ssa/: README.md
Reports/4.2-gvn/: README.md
include/: cminusf_builder.hpp
include/lightir/: BasicBlock.h  Function.h  GlobalVariable.h  IRBuilder.h  IRprinter.h  Instruction.h  Module.h  Type.h  User.h  Value.h
include/optimization/: DeadCode.h  Dominators.h  FuncInfo.h  GVN.h  Mem2Reg.hpp  PassManager.hpp
src/: CMakeLists.txt
src/cminusfc/: CMakeLists.txt  cminusf_builder.cpp  cminusfc.cpp
src/common/: ast.cpp
src/io/: io.c
src/lightir/: BasicBlock.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp
src/optimization/: CMakeLists.txt  Dominators.cpp  GVN.cpp  Mem2Reg.cpp
src/parser/: CMakeLists.txt  lexical_analyzer.l  syntax_analyzer.y
tests/: CMakeLists.txt
tests/2-ir-gen-warmup/: CMakeLists.txt
tests/2-ir-gen-warmup/calculator/: CMakeLists.txt  calc.cpp  calc_ast.cpp  calc_ast.hpp  calc_builder.cpp  calc_builder.hpp  calculator.l  calculator.y
tests/2-ir-gen-warmup/stu_cpp/: assign_generator.cpp  fun_generator.cpp  if_generator.cpp  while_generator.cpp
tests/2-ir-gen-warmup/stu_ll/: assign_hand.ll  fun_hand.ll  if_hand.ll  while_hand.ll
tests/2-ir-gen-warmup/ta_gcd/: gcd_array_generator.cpp
tests/3-ir-gen/: eval.py
tests/3-ir-gen/answers/lv0_2/: num_comp1.out
tests/3-ir-gen/answers/lv1/: assign_float_var_global.out  (+1 more)
tests/4-ir-opt/: lab4_evals.py
tests/parser/: .gitignore  CMakeLists.txt  cleanup.sh  lexer.c
tests/parser/easy/: FAIL_comment.cminus  FAIL_comment2.cminus  FAIL_function.cminus  expr.cminus  id.cminus
tests/parser/hard/: assoc.cminus  gcd.cminus  hanoi.cminus  if.cminus
tests/parser/normal/: FAIL_assign.cminus  if.cminus  skip_spaces.cminus
tests/parser/syntree_easy_std/: expr.syntax_tree  id.syntax_tree
tests/parser/syntree_hard_std/: You_Should_Pass.syntax_tree  assoc.syntax_tree  hanoi.syntax_tree  if.syntax_tree  selectionsort.syntax_tree
tests/parser/syntree_normal_std/: func.syntax_tree  if.syntax_tree  skip_spaces.syntax_tree
(+84 files in other folders)
